Add a scripted test